--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "@rocicorp/zero": "^0.17.2025031400",
+    "jose": "^6.0.10",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
